<resources>
    <string name="app_name">BotGuise</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">LET\'S GO</string>

    <string name="slide_1_title">Welcome to BotGuise!</string>
    <string name="slide_1_desc">train.battle.lead</string>

    <string name="slide_2_title">Train</string>
    <string name="slide_2_desc">Chat with your BOT and train it to be INVINCIBLE.</string>

    <string name="slide_3_title">Battle</string>
    <string name="slide_3_desc">Disguise your bot and outwit your friends!</string>

    <string name="slide_4_title">Top the Charts!!</string>
    <string name="slide_4_desc">Train your Bot and Battle with others to Steal the limelight</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="default_google_web_client_id">470948585777-8qv7kqhpd4ap744u0kuge08e8q38f72n.apps.googleusercontent.com</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="Continue">Continue</string>
    <string name="go_to_sign_up">Don\'t have an account? Sign up</string>
    <string name="go_to_login">Already a member? Login</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="verify_email">Verify Email</string>
    <string name="reset_password">Reset password</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="choose_mode">Choose Mode</string>
    <string name="train">Train</string>
    <string name="battle">battle</string>

    <string name="pack01">pack01</string>
    <string name="pack02">pack02</string>
    <string name="pack03">pack03</string>
    <string name="pack04">pack04</string>

    <string name="empty_prev_response_for_bot">98a633a4227ede00887ce0e76fbc98d8</string>

    <integer name="card_flip_time_full">2000</integer>
    <integer name="card_flip_time_half">1000</integer>
</resources>
