<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_50"
    android:orientation="vertical"
    tools:context=".ChooseMode">

    <RelativeLayout
        android:id="@+id/cover"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/pack_cover_height">

        <ImageView
            android:id="@+id/backdrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:scaleType="fitXY"
            android:src="@drawable/marvel_dc_back"
            app:layout_collapseMode="parallax" />

        <ImageView
            android:id="@+id/back_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@drawable/ic_arrow_back" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cover"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:text="@string/choose_mode"
            android:textColor="@color/blue_800"
            android:textSize="40sp" />

        <Button
            android:id="@+id/trainButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/button_style"
            android:padding="30dp"
            android:text="@string/train"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/fightButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_style"
            android:padding="30dp"
            android:text="@string/battle"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </LinearLayout>
</RelativeLayout>